flat-feat!: Dynamically add RWT cols to attestation check-in report
[#OCD-5321]