@@ -38,7 +38,10 @@ public class DeveloperAttestationCheckInReportJob extends QuartzJob {
     private AttestationCheckinReportDAO attestationCheckinReportDAO;
 
     @Autowired
-    private CheckInReportSummaryDataCollector checkInReportSummaryDataCollection;
+    private CheckInReportSummaryDataCollector checkInReportSummaryDataCollector;
+
+    @Autowired
+    private CheckInReportRwtResultsDataCollector checkInReportRwtResultsDataCollector;
 
     @Autowired
     private CheckInReportCsvWriter checkInReportCsvWriter;
@@ -102,7 +105,7 @@ public class DeveloperAttestationCheckInReportJob extends QuartzJob {
 
                     List<CheckInReport> reportRows = getCheckInReports(acbs);
 
-                    CheckInReportSummary reportSummary = checkInReportSummaryDataCollection.collect(reportRows);
+                    CheckInReportSummary reportSummary = checkInReportSummaryDataCollector.collect(reportRows);
                     File csv = checkInReportCsvWriter.generateFile(reportRows);
                     chplEmailFactory.emailBuilder()
                             .recipient(context.getMergedJobDataMap().getString("email"))
@@ -133,7 +136,8 @@ public class DeveloperAttestationCheckInReportJob extends QuartzJob {
     private List<CheckInReport> getCheckInReports(List<CertificationBody> acbs) {
         return attestationCheckinReportDAO.getCheckinReports(attestationCheckinReportDAO.getMaxReportDate()).stream()
                 .filter(cr -> isCheckinreportValidOForAcbs(cr, acbs))
-                .toList();
+                .peek(checkInReport -> checkInReport.setCriterionAndSvapData(checkInReportRwtResultsDataCollector.collect(checkInReport.getDeveloperId())))
+                .collect(Collectors.toList());
     }
 
     private boolean isCheckinreportValidOForAcbs(CheckInReport report, List<CertificationBody> acbs) {
